Upgrade build scripts and dependencies Update compile to Java 1.7 Clean up code formatting in LoggingConfiguration (in preparation for code changes) Catch 'Exception' instead of 'Throwable' where the exception is being discarded

--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,42 @@
+buildscript {
+    repositories { 
+        mavenCentral() 
+    }
+}
+
+plugins {
+    id 'nebula.netflixoss' version '2.2.9'
+    id 'nebula.provided-base' version '2.0.1'
+}
+
+apply plugin: 'nebula.netflixoss'
+apply plugin: 'nebula.provided-base'
+apply plugin: 'java'
+
 // Establish version and status
 ext.githubProjectName = rootProject.name // Change if github project name is not the same as the root project's name
 group = "com.netflix.${githubProjectName}"
 
-buildscript {
-    repositories { mavenCentral() }
-    apply from: file('gradle/buildscript.gradle'), to: buildscript 
-}
-
 allprojects {
-    repositories { mavenCentral() }
+    repositories { 
+        mavenCentral() 
+    }
 }
 
-
-apply from: file('gradle/convention.gradle')
-apply from: file('gradle/maven.gradle')
-apply from: file('gradle/check.gradle')
-apply from: file('gradle/license.gradle')
-apply from: file('gradle/release.gradle')
-
-//apply plugin: 'war'
-//apply plugin: 'jetty'
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 test {
- include 'com/netflix/blitz4j/**'
+    include 'com/netflix/blitz4j/**'
 }
 
 dependencies {
     compile 'com.netflix.servo:servo-core:0.4.36'
-    compile 'com.netflix.archaius:archaius-core:0.4.1'
-    compile 'org.slf4j:slf4j-api:1.6.4'
+    compile 'com.netflix.archaius:archaius-core:0.7.3'
+    compile 'org.slf4j:slf4j-api:1.7.3'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.slf4j:slf4j-api:1.6.4'
     compile 'commons-collections:commons-collections:3.2.1'
-    testCompile 'junit:junit:4.10'
-    testCompile 'org.slf4j:slf4j-log4j12:1.6.4'
+    testCompile 'junit:junit:4.11'
+    testCompile 'org.slf4j:slf4j-log4j12:1.7.3'
 }
 
